# 0002-USACO-Training

./: .clang-format  CMakeLists.txt  README.md  friday.cc  gift1.cc  ride.cc  test.cc  test_harness.cc
.github/: labeler.yml
.github/workflows/: cmake.yml
